# Quantum-Tumor_Model

./: pyproject.toml
docs/source/: conf.py  index.rst
docs/source/theory/: 01_introduction.md
results/baseline_20260109-160320/: status.txt
results/baseline_20260109-160328/: config_merged.yaml
